# OptiCore

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  makefile
docs/design/optiCore/: optiCore.tex
docs/design/optiCore/00-DocumentSettings/: Definitions.tex  PreTitle.tex  Preamble.tex
docs/design/optiCore/02-Body/: Body.tex  Introduction.tex
docs/design/optiCore/02-Body/Assembler/: body.tex
docs/design/optiCore/02-Body/CPU/: body.tex
docs/design/optiCore/02-Body/InstructionSet/: body.tex
docs/document-generator/Latex/: LatexCreate.sh
include/Lexer/: lexer.h  token_def.inl
scripts/: generate_docs.sh
src/Lexer/: lexer.cpp
tests/: makefile
tests/lib/: makefile
